# Lisa-cyphers-helper-client

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  client.rs  command.rs  error.rs  exs.rs  gui.rs  lib.rs  main.rs  neople.rs  object.rs  page.rs  util.rs
src/client/: meta.rs  setting.rs  subscription.rs  test.rs  userinfo.rs
src/gui/: main.rs  records.rs  sidebar.rs
src/gui/main/: content.rs  sidebar.rs
src/gui/records/: sidebar.rs
src/neople/: info.rs  matches.rs  players.rs  ranking.rs
src/object/: builder.rs  charactor.rs  clan.rs  neople.rs  notify.rs  player.rs  saved.rs
src/object/Neople/: info.rs  players.rs
src/object/Neople/players/: Base.rs  Info.rs  Records.rs
src/object/neople/: Record.rs  info.rs  matches.rs  players.rs  ranking.rs
src/object/neople/players/: Base.rs  Matches.rs  Records.rs  records.rs
src/object/player/: Records.rs  Saved.rs  base.rs  info.rs  record.rs  saved.rs
src/page/: game_record.rs  history.rs  matches.rs  my.rs  profile.rs  record.rs  set.rs
src/util/: data_serializer.rs  history.rs  temp.rs
tests/: clan.rs  client.rs  player.rs  req.rs  version.rs
