[package]
name = "lisa"
version = "0.1.0"
authors = ["Insiro. <leeon@insiro.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.3"
webbrowser = "0.5.5"
chrono = "0.4.19"
futures = "0.3.14"
reqwest = "0.11.3"
select = "0.5.0"
tokio = {version = "1.5.0", features = [ "full"]}
serde = {version="1.0.126",features = ["derive"]}
serde_json = "1.0.64"
rust-sqlite = "0.3.0"
getset = "0.1"
cargo_metadata = "0.14.1"