[package]
authors = ["Insiro. <leeon@insiro.me>"]
edition = "2021"
name = "lisa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#region ajax
futures = "0.3.14"
tokio = {version = "1.5.0", features = ["full"]}
#endregion
cargo_metadata = "0.14.1"
chrono = "0.4.19"
getset = "0.1"
reqwest = "0.11.3"
rust-sqlite = "0.3.0"
webbrowser = "0.5.5"
#region Serialize and Deserialize
select = "0.5.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
#endregion
native-windows-derive = "1.0.4"
native-windows-gui = "1.0.12"
